# competitive-problems-tools

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.sh  cp-tools.1
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
classes/: TEP.cls  cp_classic.cls  cp_modern.cls  cp_oj.cls  cp_uva.cls
include/: check.h  clean.h  config.h  conflicts.h  cptools.h  defs.h  dirs.h  error.h  exceptions.h  format.h  fs.h  genpdf.h  gentex.h  ini.h  init.h  judge.h  markdown_parser.h  message.h  polygon.h  problem.h  sh.h  table.h  task.h  util.h
libs/: httplib.h
metadata/: name
scripts/: cp-tools-completion.sh  gen_defs.sh
src/: CMakeLists.txt  check.cpp  clean.cpp  config.cpp  conflicts.cpp  cptools.cpp  exceptions.cpp  format.cpp  fs.cpp  genpdf.cpp  gentex.cpp  ini.cpp  init.cpp  judge.cpp  main.cpp  message.cpp  polygon.cpp  problems.cpp  sh.cpp  table.cpp  task.cpp  util.cpp
src/api/: polygon.cpp
src/cli/: cli.cpp  format.cpp
src/commands/: check.cpp  clean.cpp  cptools.cpp  genboca.cpp  genpdf.cpp  gentex.cpp  init.cpp  judge.cpp  pack4.cpp  polygon.cpp
src/commands/polygon/: polygon.cpp  pull.cpp
src/logger/: format.cpp  logger.cpp  message.cpp
src/types/: polygon.cpp
temp/: Makefile  args.cpp  args.h  build.sh  default.cpp  default.h  dirs.h  init.cpp  main.cpp  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  utils.h
templates/: config.json  problem.md
test/: run.sh  spec.txt  spec_tests.py
tests/: clean.cpp  config.cpp  cptools.cpp  init.cpp  main.cc  polygon.cpp  problem.cpp  util.cpp
(+89 files in other folders)
